--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div class="plan">
+    <div class="plan plan--popular">
         <div class="card card--primary">
             <header class="card__header">
                 <h3 class="plan__name">Entry</h3>
