fix errors thrown by validator

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                 </svg>         
                             </div>
                             <div class="media__body">
-                                <h3 class="media__title"></h3>
+                                <h3 class="media__title">Staging, Git & WP-CLI</h3>
                                 <p>
                                     We make your WordPress and WooCommerce development flow easier 
                                     with a convenient staging tool and Git and WP-CLI integration.
@@ -293,7 +293,7 @@
                                     minus! Rerum pariatur a ut sit, quaerat esse deleniti officia sunt ea 
                                     maiores eius temporibus cum in praesentium quod voluptate voluptatem?       
                                 </p>
-                                <footer>
+                                <div>
                                     <div class="media">
                                         <div class="media__image">           
                                             <svg class="icon icon--primary quote__line">
@@ -307,7 +307,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                </footer>
+                                </div>
                             </blockquote>
                         </div>
                     </div>
@@ -338,12 +338,12 @@
     <footer class="block block--dark footer">
         <div class="container grid footer_sections">
             <section class="collapsible footer__section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Products</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>       
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="">WordPress Hosting</a></li>
@@ -355,12 +355,12 @@
                 </div>
             </section>
             <section class="collapsible footer__section">
-                <header class="collapsible__header ">
+                <div class="collapsible__header ">
                     <h2 class="collapsible__heading footer__heading">Company</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>       
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="">About</a></li>
@@ -374,12 +374,12 @@
                 </div>
             </section>
             <section class="collapsible footer__section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Support</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>       
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="">Contact</a></li>
@@ -392,12 +392,12 @@
                 </div>
             </section>
             <section class="collapsible footer__section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Domains</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>       
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="">Domain Checker</a></li>
@@ -408,10 +408,10 @@
                     </ul>
                 </div>
             </section>
-            <section class="footer__brand">
+            <div class="footer__brand">
                 <img src="images/logo.svg" alt="">
                 <p class="footer__copyright">Copyright 2021 Carlos Marcano</p>
-            </section>
+            </div>
         </div>
     </footer>
     <script src="js/main.js"></script>
