--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Deploy your website in less than 60 seconds">
-    <meta property="og:title" content="Moshify">
-    <meta property="og:description" content="Moshify...">
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="Moshify">
-    <meta property="og:url" content="Moshify">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="">
     <title>Moshify - Go Online for Just $9</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"> 
@@ -336,7 +336,7 @@
         </div>
       </div>
     <footer class="block block--dark footer">
-        <div class="container grid footer_sections">
+        <div class="container grid footer__sections">
             <section class="collapsible footer__section">
                 <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Products</h2>
